kubernetes/apps/tgoo/_base/netpol.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tgoo
spec:
  description: "Network policies for the tgoo website"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: tgoo
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: cnpg-harbor
      toPorts:
        - ports:
            - port: "5432"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
